test/trivial/bradc/uintloop.good
uintloop.chpl:1: In function '__init_uintloop':
uintloop.chpl:3: error: Invalid arithmetic sequence, bounds and stride must be integers
